--- a/NumbersToLetters.html
+++ b/NumbersToLetters.html
@@ -24,7 +24,7 @@
         output = "";
         iArray = [];
         input = document.getElementById("numberInput").value;
-        for (var i = 0; i < input.length; i += 1) {
+        for (var i = 0; i < input.length; i++) {
             iArray.push(input.charAt(i));
         }
         while (iArray.length != 0) {
